transport master takes bpm value as float

--- a/api/Time.yaml
+++ b/api/Time.yaml
@@ -53,6 +53,6 @@ classes :
     - name: TransportMaster
       include: transportmaster
       ctor:
-        parameters: { name: bpm, type: integer }
+        parameters: { name: bpm, type: float }
         expression: TransportMasterCache::instance().getTransportMaster
 
