count-in function for midi beat tracker

--- a/api/Midi.yaml
+++ b/api/Midi.yaml
@@ -121,3 +121,6 @@ classes :
         - name: connectMidi
           parameters:
             - { name: source, type: EventSource }
+        - name: countIn
+          parameters:
+            - { name: note, type: integer }
