stop on silence function for midi beat tracker

--- a/api/Midi.yaml
+++ b/api/Midi.yaml
@@ -124,3 +124,6 @@ classes :
         - name: countIn
           parameters:
             - { name: note, type: integer }
+        - name: stopOnSilence
+          parameters:
+            - { name: seconds, type: integer }
