--- a/api/Audio.yaml
+++ b/api/Audio.yaml
@@ -62,6 +62,10 @@ classes :
         - { name: name, type: string }
         - { name: connection, type: string }
         expression: AudioOutputPortCache::instance().getAudioOutputPort
+      methods:
+        - name: connect
+          parameters:
+            - { name: source, type: AudioSource }
 
     - name: Input
       super:
