--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,10 +7,12 @@ cmake_minimum_required(VERSION 2.8)
 
 aux_source_directory("src" SRC_LIST)
 aux_source_directory("bindings" SRC_LIST)
+aux_source_directory("squirrel/squirrel" SRC_LIST)
+aux_source_directory("squirrel/sqstdlib" SRC_LIST)
 
 include_directories("src")
 include_directories("bindings")
-include_directories("squirrel")
+include_directories("squirrel/include")
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
 
@@ -20,5 +22,3 @@ add_executable(${PROJECT_NAME} ${SRC_LIST})
 
 target_link_libraries(${PROJECT_NAME} "jack")
 target_link_libraries(${PROJECT_NAME} "lilv-0")
-target_link_libraries(${PROJECT_NAME} ${CMAKE_SOURCE_DIR}/squirrel/libsquirrel.a)
-target_link_libraries(${PROJECT_NAME} ${CMAKE_SOURCE_DIR}/squirrel/libsqstdlib.a)
