abcreader read() prepends abc headers, returns midi pattern

--- a/api/Midi.yaml
+++ b/api/Midi.yaml
@@ -24,6 +24,11 @@ classes :
       ctor: {}
       methods:
         - name: read
+          returns: Midi.Pattern
+          parameters:
+            - {name: abc, type: string}
+            - {name: key, type: string, optional: true }
+        - name: readTune
           returns: Midi.Tune
           parameters:
             - {name: abc, type: string}
