abcreader reads abc meter and stores as tune time signature

--- a/api/Midi.yaml
+++ b/api/Midi.yaml
@@ -98,6 +98,8 @@ classes :
       cppname: MidiTune
       include: miditune
       methods:
+        - name: getTimeSignature
+          returns: Time.Signature
         - name: getTitle
           returns: string
         - name: getTrackCount
