mixer connect takes optional initial gain

--- a/api/Audio.yaml
+++ b/api/Audio.yaml
@@ -39,6 +39,7 @@ classes :
         - name: connect
           parameters:
             - {name: source, type: AudioSource}
+            - {name: gain, type: float, optional: true}
 
         - name: scheduleGain
           parameters:
