--- a/api/Midi.yaml
+++ b/api/Midi.yaml
@@ -39,10 +39,7 @@ classes :
     - name: Input
       cppname: MidiInputPort
       super: EventSource
-      include:
-        - midiport
-      ctor:
-        parameters: {name: name, type: string}
+      include: midiport
       ctor:
         parameters:
           - {name: name, type: string}
@@ -114,7 +111,7 @@ classes :
       ctor:
         parameters:
           - { name: name, type: string }
-          - { name: connection, type: string }
+          - { name: connection, type: string, optional: true }
         expression: MidiOutputPortCache::instance().getMidiOutputPort
       methods:
       - name: setDefaultChannel
