--- a/api/Audio.yaml
+++ b/api/Audio.yaml
@@ -59,7 +59,7 @@ classes :
       ctor:
         parameters:
         - { name: name, type: string }
-        - { name: connection, type: string }
+        - { name: connection, type: string, optional: true }
         expression: AudioOutputPortCache::instance().getAudioOutputPort
       methods:
         - name: connect
@@ -75,7 +75,7 @@ classes :
       ctor:
         parameters:
         - { name: name, type: string }
-        - { name: connection, type: string }
+        - { name: connection, type: string, optional: true }
         expression: AudioInputPortCache::instance().getAudioInputPort
 
     - name: StereoOutput
