--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,5 +28,6 @@ add_executable(${PROJECT_NAME} ${SRC_LIST})
 target_link_libraries(${PROJECT_NAME} "jack")
 target_link_libraries(${PROJECT_NAME} "lilv-0")
 target_link_libraries(${PROJECT_NAME} "fftw3")
+target_link_libraries(${PROJECT_NAME} "pthread")
 target_link_libraries(${PROJECT_NAME} "boost_system")
 target_link_libraries(${PROJECT_NAME} "boost_filesystem")
