--- a/api/Time.yaml
+++ b/api/Time.yaml
@@ -64,7 +64,10 @@ classes :
     - name: TransportMaster
       include: transportmaster
       ctor:
-        parameters: { name: bpm, type: float }
+        parameters:
+          - { name: bpm, type: float }
+          - { name: numerator, type: integer, optional: true }
+          - { name: denominator, type: integer, optional: true }
         expression: TransportMasterCache::instance().getTransportMaster
       methods:
         - name: setTimeSignature
