--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,12 +11,14 @@ aux_source_directory("abcmidi" SRC_LIST)
 aux_source_directory("btrack" SRC_LIST)
 aux_source_directory("squirrel/squirrel" SRC_LIST)
 aux_source_directory("squirrel/sqstdlib" SRC_LIST)
+aux_source_directory("tinymml" SRC_LIST)
 
 include_directories("src")
 include_directories("bindings")
 include_directories("abcmidi")
 include_directories("btrack")
 include_directories("squirrel/include")
+include_directories("tinymml")
 
 add_definitions(-DANSILIBS)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
