--- a/api/Audio.yaml
+++ b/api/Audio.yaml
@@ -84,7 +84,8 @@ classes :
         expression: AudioInputPortCache::instance().getAudioInputPort
 
     - name: StereoOutput
-      include: stereoport
+      cppname: AudioStereoOutput
+      include: audioport
       ctor:
         parameters:
           - { name: name, type: string }
