--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ add_executable(${PROJECT_NAME} ${SRC_LIST})
 target_link_libraries(${PROJECT_NAME} "dl")
 target_link_libraries(${PROJECT_NAME} "jack")
 target_link_libraries(${PROJECT_NAME} "lilv-0")
+target_link_libraries(${PROJECT_NAME} "lo")
 target_link_libraries(${PROJECT_NAME} "fftw3")
 target_link_libraries(${PROJECT_NAME} "pthread")
 target_link_libraries(${PROJECT_NAME} "boost_system")
