--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
 
 add_executable(${PROJECT_NAME} ${SRC_LIST})
 
+target_link_libraries(${PROJECT_NAME} "aubio")
 target_link_libraries(${PROJECT_NAME} "dl")
 target_link_libraries(${PROJECT_NAME} "jack")
 target_link_libraries(${PROJECT_NAME} "lilv-0")
