remove getter/setter notation on methods

--- a/api/Audio.yaml
+++ b/api/Audio.yaml
@@ -67,10 +67,12 @@ classes :
       - name: connect
         parameters:
         - { name: source, type: AudioSource }
-      - name: setThreshold
+      - name: threshold
+        cppname: setThreshold
         parameters:
         - { name: threshold, type: float }
-      - name: setSilence
+      - name: silence
+        cppname: setSilence
         parameters:
         - { name: threshold, type: float }
 
